# pymcu-avr

./: .gitignore  Directory.Build.props  README.md  hatch_build.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: README.md
examples/adc-interrupt/: README.md  pyproject.toml
examples/adc-interrupt/src/: main.py
examples/adc-read/: README.md  pyproject.toml
examples/adc-read/src/: main.py
examples/analog-inout/: pyproject.toml
examples/analog-inout-mp/: pyproject.toml
examples/analog-inout-mp/src/: main.py
examples/analog-inout/src/: main.py
examples/array-ops/: pyproject.toml
examples/array-ops/src/: main.py
examples/bitwise-ops/: pyproject.toml
examples/bitwise-ops/src/: main.py
examples/blink/: README.md  pyproject.toml
examples/blink/src/: main.asm  main.py
examples/bmp280/: README.md  pyproject.toml
examples/bmp280/src/: main.py
examples/builtin-ops/: pyproject.toml
examples/builtin-ops/src/: main.py
examples/button-debounce/: README.md  pyproject.toml
examples/button-debounce/src/: main.py
examples/bytes-ops/: pyproject.toml
examples/bytes-ops/src/: main.py
examples/callbacks/: pyproject.toml
examples/callbacks/src/: main.py
examples/checksum/: README.md  pyproject.toml
examples/checksum/src/: main.py
examples/clamp-filter/: README.md  pyproject.toml
examples/clamp-filter/src/: main.py
examples/delay-test/: pyproject.toml
examples/delay-test/src/: main.py
examples/dht-sensor/: README.md  pyproject.toml
examples/dht-sensor/src/: dht11.py  main.py
examples/dunder-ops/: pyproject.toml
examples/dunder-ops/src/: main.py
examples/edge-cases/: pyproject.toml
examples/edge-cases/src/: main.py
examples/eeprom/: README.md  pyproject.toml
examples/eeprom/src/: main.py
examples/enum-state/: README.md  pyproject.toml
examples/enum-state/src/: main.py
examples/error-handling/: README.md  pyproject.toml
examples/error-handling/src/: main.py
examples/extern-call/: README.md  pyproject.toml
examples/extern-call/c_src/: math_helper.c  math_helper.h
examples/extern-call/src/: main.py
examples/ffi-abi/: README.md  pyproject.toml
examples/ffi-abi/c_src/: abi_probe.c  abi_probe.h
examples/ffi-abi/src/: main.py
examples/ffi-arduino/: README.md  pyproject.toml
examples/ffi-arduino/c_src/: arduino_utils.c  arduino_utils.h
examples/ffi-arduino/src/: main.py
examples/ffi-crc8/: README.md  pyproject.toml
examples/ffi-crc8/c_src/: crc8.c  crc8.h
examples/ffi-crc8/src/: main.py
examples/ffi-dsp/: README.md  pyproject.toml
examples/ffi-dsp/c_src/: filter.c  filter.h  math_utils.c  math_utils.h
examples/ffi-dsp/src/: main.py
examples/i2c-irq/: README.md  pyproject.toml
examples/i2c-irq/src/: main.py
examples/i2c-rw/: pyproject.toml
examples/i2c-rw/src/: main.py
examples/i2c-scanner/: README.md  pyproject.toml
examples/i2c-scanner/src/: main.py
examples/inheritance-zca/: README.md  pyproject.toml
examples/inheritance-zca/src/: main.py
examples/interrupt-counter/: README.md  pyproject.toml
examples/lambda-ops/: pyproject.toml
examples/lcd/: README.md  pyproject.toml
examples/lcd/src/: main.py
examples/list-comp/: pyproject.toml
examples/match-advanced/: pyproject.toml
examples/matrix-math/: pyproject.toml
examples/max7219/: README.md  pyproject.toml
examples/multi-isr/: pyproject.toml
examples/multi-pin/: README.md  pyproject.toml
examples/neopixel/: README.md  pyproject.toml
examples/nested-calls/: pyproject.toml
examples/nested-listcomp/: pyproject.toml
examples/new-builtins/: pyproject.toml
examples/nonlocal/: pyproject.toml
examples/pcint-counter/: README.md  pyproject.toml
examples/pin-irq/: README.md  pyproject.toml
examples/pin-irq-mp/: pyproject.toml
examples/pwm-fade/: README.md  pyproject.toml
examples/pwm-multi/: README.md  pyproject.toml
examples/random-led/: README.md  pyproject.toml
examples/read-blocking/: pyproject.toml
examples/rtos-multitask/: README.md  pyproject.toml
examples/sensor-dashboard/: README.md  pyproject.toml
examples/servo/: README.md  pyproject.toml
examples/shift-register/: README.md  pyproject.toml
examples/sleep-wakeup/: README.md  pyproject.toml
examples/slice-ops/: pyproject.toml
examples/smoothing/: pyproject.toml
examples/soft-pwm/: README.md  pyproject.toml
examples/soft-pwm/src/: main.py
examples/softspi/: README.md  pyproject.toml
examples/softspi-peripheral/: README.md  pyproject.toml
examples/spi-cs/: README.md  pyproject.toml
examples/spi-irq/: README.md  pyproject.toml
examples/spi-shift-register/: README.md  pyproject.toml
examples/ssd1306/: README.md  pyproject.toml
examples/state-machine/: README.md  pyproject.toml
examples/stopwatch/: README.md  pyproject.toml
examples/stress-math/: pyproject.toml
examples/t-flag-demo/: README.md  pyproject.toml
examples/timer-ctc/: README.md  pyproject.toml
examples/timer-interrupt/: README.md  pyproject.toml
examples/timer-poll/: README.md  pyproject.toml
examples/timer2-interrupt/: pyproject.toml
examples/tone-buzzer/: README.md  pyproject.toml
examples/tone-buzzer/src/: main.py
examples/tuple-ops/: pyproject.toml
examples/tuple-unpack/: pyproject.toml
examples/uart-command/: README.md  pyproject.toml
examples/uart-echo/: README.md  pyproject.toml
examples/uart-echo-cp/: README.md  pyproject.toml
examples/uart-echo-cp/src/: main.py
examples/uart-echo-mp/: README.md  pyproject.toml
examples/uart-rx-interrupt/: README.md  pyproject.toml
examples/uart-str/: README.md  pyproject.toml
examples/uint16-math/: pyproject.toml
examples/watchdog/: README.md  pyproject.toml
src/asm/: gc_runtime.S
tests/integration/: AllocStressGenerator.cs  AssemblyParallelism.cs  IsrArrayGenerator.cs  IsrNestedCallGenerator.cs  IsrSafetyGenerator.cs  IsrU16Generator.cs  PyMCU.IntegrationTests.csproj  PymcuCompiler.cs  SignedDivModGenerator.cs  SignedStressGenerator.cs  SimSession.cs  TwoIsrGenerator.cs
tests/toolchain/: test_avr_supply_chain.py
tests/unit/: PyMCU.AVR.UnitTests.csproj
(+524 files in other folders)
