[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "pymcu-avr"
version = "0.1.0a1"
description = "AVR support for pymcu-compiler: codegen backend + toolchain driver"
readme = "README.md"
authors = [
    { name = "Iván Montiel Cardona", email = "developer@begeistert.dev" }
]
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pymcu-backend-sdk>=0.1.0a1",
    "pymcu-toolchain-sdk>=0.1.0a1",
    # Pull in the pre-built avr-gcc toolchain wheel so `pip install
    # pymcu-compiler[avr]` is self-contained (no manual toolchain step).
    # Wheels exist only for linux x86_64, win amd64 and macOS arm64; on other
    # platforms (linux arm64, macOS Intel) the user supplies avr-gcc via the
    # system package manager and the AvrgasToolchain falls back to PATH.
    "pymcu-avr-toolchain>=15.2.0; (sys_platform == 'linux' and platform_machine == 'x86_64') or (sys_platform == 'win32' and platform_machine == 'AMD64') or (sys_platform == 'darwin' and platform_machine == 'arm64')",
]

[project.entry-points."pymcu.toolchains"]
avr = "pymcu.toolchain.avr:AvrToolchainPlugin"

[project.entry-points."pymcu.backends"]
avr = "pymcu.backend.avr:AvrBackendPlugin"

[tool.uv.sources]
pymcu-backend-sdk = {path = "../pymcu-backend-sdk", editable = true}
pymcu-toolchain-sdk = {path = "../pymcu-toolchain-sdk", editable = true}

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["src/python/pymcu"]
artifacts = ["src/python/pymcu/backend/avr/pymcuc-avr*"]
