[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "pymcu-avr"
version = "0.1.0a1.post2"
description = "AVR support for pymcu-compiler: codegen backend + toolchain driver"
readme = "README.md"
authors = [
    { name = "Iván Montiel Cardona", email = "contact@pymcu.org" }
]
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pymcu-sdk>=0.1.0a1",
    # Pull in the pre-built avr-gcc 7.3.0 toolchain wheel so that
    # `pip install pymcu-compiler[avr]` is self-contained.
    # Wheels cover all supported platforms; the toolchain is auto-downloaded
    # from the PlatformIO CDN on first use if no bundled binary is present.
    "pymcu-avr-toolchain>=1!7.3.0; sys_platform == 'linux' or sys_platform == 'win32' or sys_platform == 'darwin'",
]

[project.entry-points."pymcu.toolchains"]
avr = "pymcu.toolchain.avr:AvrToolchainPlugin"

[project.entry-points."pymcu.backends"]
avr = "pymcu.backend.avr:AvrBackendPlugin"

[tool.uv.sources]
pymcu-sdk = {git = "https://github.com/PyMCU/pymcu", subdirectory = "extensions/pymcu-sdk"}

[project.urls]
Homepage = "https://github.com/PyMCU/pymcu-avr"
Repository = "https://github.com/PyMCU/pymcu-avr"
"Bug Tracker" = "https://github.com/PyMCU/pymcu-avr/issues"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["src/python/pymcu"]
artifacts = ["src/python/pymcu/backend/avr/pymcuc-avr*"]
