[project]
name = "ffi-arduino"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pymcu-stdlib>=0.1.2a5",
    "pymcu>=0.1.0a27"
]

[tool.pymcu]
chip = "atmega328p"
frequency = 16000000
sources = "src"
entry = "main.py"

# C interop: arduino-compatible utility functions compiled with avr-gcc.
[tool.pymcu.ffi]
sources = ["c_src/arduino_utils.c"]
include_dirs = ["c_src"]
cflags = ["-std=c11", "-Os"]
