[project]
name = "ffi-dsp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pymcu-stdlib>=0.1.2a5",
    "pymcu-compiler>=0.1.0a27"
]

[tool.pymcu]
chip = "atmega328p"
frequency = 16000000
sources = "src"
entry = "main.py"

# C interop: two C source files linked together with the firmware.
# Demonstrates multi-file FFI builds with avr-gcc + avr-ld.
[tool.pymcu.ffi]
sources = [
    "c_src/math_utils.c",
    "c_src/filter.c",
]
include_dirs = ["c_src"]
cflags = ["-std=c11", "-Os"]
