[project]
name = "soft-pwm"
version = "0.1.0"
dependencies = [
    "pymcu-stdlib>=0.1.2a5",
    "pymcu-compiler>=0.1.0a27"
]

[[tool.uv.index]]
name = "gitea"
url = "https://gitea.begeistert.dev/api/packages/begeistert/pypi/simple"
explicit = true

[tool.uv.sources]
pymcu-stdlib = {index = "gitea"}
pymcu-compiler = {index = "gitea"}

[tool.pymcu]
chip = "atmega328p"
frequency = 16000000
sources = "src"
entry = "main.py"
