[project]
name = "soft-pwm"
version = "0.1.0"
dependencies = [
    "whipsnake-stdlib>=0.1.2a5",
    "whipsnake>=0.1.0a27"
]

[[tool.uv.index]]
name = "gitea"
url = "https://gitea.begeistert.dev/api/packages/begeistert/pypi/simple"
explicit = true

[tool.uv.sources]
whipsnake-stdlib = {index = "gitea"}
whipsnake = {index = "gitea"}

[tool.whip]
chip = "atmega328p"
frequency = 16000000
sources = "src"
entry = "main.py"
