[project]
name = "uart-echo-cp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pymcu-stdlib>=0.1.2a5",
    "pymcu-compiler>=0.1.0a27",
    "pymcu-circuitpython>=0.1.0",
]

[tool.pymcu]
board     = "arduino_uno"
frequency = 16000000
sources   = "src"
entry     = "main.py"
stdlib    = ["circuitpython"]
